<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourname="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Steps.BasicInformationActivity">

    <include layout="@layout/toolbar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/basic_infbg"
        android:paddingTop="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="13"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:weightSum="13">

                <com.example.fatmaali.madrasty2.Utilities.FontTextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/confirmBasicInf"
                    android:textColor="@color/colorTextC"
                    android:textSize="15dp"
                    yourname:customFont="bukra_regular.ttf" />

                <Spinner
                    android:id="@+id/idSpinnerLearning"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:prompt="@string/learning" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorLine" />

                <Spinner
                    android:id="@+id/idSpinnerNum"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:prompt="@string/type" />

                <com.example.fatmaali.madrasty2.Utilities.FontEditView
                    android:id="@+id/NameOfAdministration"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/NameOfAdministration"
                    android:textSize="18dp"
                    yourname:customFont="bukra_regular.ttf" />

                <com.example.fatmaali.madrasty2.Utilities.FontEditView
                    android:id="@+id/SchoolName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/SchoolName"
                    android:textSize="17dp"
                    yourname:customFont="bukra_regular.ttf" />

                <com.example.fatmaali.madrasty2.Utilities.FontTextView
                    android:id="@+id/periodFromEdTxt"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/periodFrom"
                    android:textSize="16dp"
                    yourname:customFont="bukra_regular.ttf" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorLine" />

                <com.example.fatmaali.madrasty2.Utilities.FontTextView
                    android:id="@+id/periodToEdTxt"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/periodTo"
                    android:textSize="16dp"
                    yourname:customFont="bukra_regular.ttf" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorLine" />
            </LinearLayout>

            <com.example.fatmaali.madrasty2.Utilities.FontTextView
                android:id="@+id/btn_BasicInf"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/basic_infbtnbg"
                android:gravity="center"
                android:hint="@string/send"
                android:onClick="BasicInformation"
                android:textColorHint="@color/colorWhite"
                android:textSize="27dp"
                yourname:customFont="bukra_medium.ttf" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>