<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourname="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RegFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@+id/footer"
            android:layout_weight="9"
            android:fillViewport="true"
            android:padding="1dp">
            <!-- TODO: Update blank fragment layout -->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.example.fatmaali.madrasty2.Utilities.FontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:gravity="center"
                        android:text="@string/registratin"
                        android:textSize="20dp"
                        yourname:customFont="bukra_regular.ttf" />

                    <com.example.fatmaali.madrasty2.Utilities.FontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lineSpacingExtra="6dp"
                        android:text="@string/registrationText"
                        android:textSize="11dp"
                        yourname:customFont="bukra_regular.ttf" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                    <com.example.fatmaali.madrasty2.Utilities.FontEditView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/fullName"
                        android:paddingRight="15dp"
                        android:textSize="15dp"
                        yourname:customFont="bukra_regular.ttf" />

                    <com.example.fatmaali.madrasty2.Utilities.FontEditView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/userName"
                        android:paddingRight="15dp"
                        android:textSize="15dp"
                        yourname:customFont="bukra_regular.ttf" />

                    <com.example.fatmaali.madrasty2.Utilities.FontEditView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/phoneNumber"
                        android:paddingRight="15dp"
                        android:textSize="15dp"
                        yourname:customFont="bukra_regular.ttf" />

                    <com.example.fatmaali.madrasty2.Utilities.FontEditView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/password"
                        android:paddingRight="15dp"
                        android:textSize="15dp"
                        yourname:customFont="bukra_regular.ttf" />

                    <com.example.fatmaali.madrasty2.Utilities.FontEditView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/confirmPassword"
                        android:paddingRight="15dp"
                        android:textSize="15dp"
                        yourname:customFont="bukra_regular.ttf" />

                    <com.example.fatmaali.madrasty2.Utilities.FontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/butlogin"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/registratin"
                        android:textColor="@color/colorWhite"
                        android:textSize="15dp"
                        yourname:customFont="bukra_regular.ttf" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                    <com.example.fatmaali.madrasty2.Utilities.FontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/loginWays"
                        android:textColor="@color/colorLoginWays"
                        android:textSize="15dp"
                        yourname:customFont="bukra_regular.ttf" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:weightSum="6.2">

                        <com.example.fatmaali.madrasty2.Utilities.FontTextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/google"
                            android:textColor="@color/google"
                            android:textSize="15dp"
                            yourname:customFont="bukra_regular.ttf" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".1"
                            android:src="@drawable/line" />

                        <com.example.fatmaali.madrasty2.Utilities.FontTextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/facebook"
                            android:textColor="@color/facebook"
                            android:textSize="15dp"
                            yourname:customFont="bukra_regular.ttf" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".1"
                            android:src="@drawable/line" />

                        <com.example.fatmaali.madrasty2.Utilities.FontTextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/tweeter"
                            android:textColor="@color/tweeter"
                            android:textSize="15dp"
                            yourname:customFont="bukra_regular.ttf" />

                    </LinearLayout>


                </LinearLayout>


            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:weightSum="3">

                <com.example.fatmaali.madrasty2.Utilities.FontTextView
                    android:textSize="11dp"
                    yourname:customFont="bukra_medium.ttf"
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:text="@string/clickHere"
                    android:textColor="@color/facebook" />

                <com.example.fatmaali.madrasty2.Utilities.FontTextView
                    android:textSize="11dp"
                    yourname:customFont="bukra_medium.ttf"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:paddingLeft="8dp"
                    android:gravity="center|left"
                    android:text="@string/ok"
                    android:textColor="@color/facebook" />

                <com.example.fatmaali.madrasty2.Utilities.FontTextView
                    android:textSize="13dp"
                    yourname:customFont="bukra_regular.ttf"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="left|center"
                    android:text="@string/questionOfRegistration"
                    android:textColor="@color/registration" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>


</FrameLayout>