<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourname="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment">



        <LinearLayout
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ScrollView
                android:layout_weight="9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_above="@+id/footer"
                android:fillViewport="true"
                android:padding="1dp">
                <!-- TODO: Update blank fragment layout -->
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout

                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.example.fatmaali.madrasty2.Utilities.FontTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textSize="25dp"
                            yourname:customFont="bukra_regular.ttf" />

                        <com.example.fatmaali.madrasty2.Utilities.FontTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:lineSpacingExtra="6dp"
                            android:text="@string/loginText"
                            android:textSize="14dp"
                            yourname:customFont="bukra_regular.ttf" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="60dp"
                        android:gravity="bottom"
                        android:orientation="vertical"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                        <com.example.fatmaali.madrasty2.Utilities.FontEditView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/userName"
                            android:paddingRight="15dp"
                            android:textSize="15dp"
                            android:layout_marginBottom="30dp"
                            yourname:customFont="bukra_regular.ttf" />

                        <com.example.fatmaali.madrasty2.Utilities.FontEditView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            android:hint="@string/password"
                            android:paddingRight="15dp"
                            android:textSize="15dp"
                            yourname:customFont="bukra_regular.ttf" />

                        <com.example.fatmaali.madrasty2.Utilities.FontTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/butlogin"
                            android:gravity="center"
                            android:padding="10dp"
                            android:id="@+id/Login"
                            android:text="@string/login"
                            android:textColor="@color/colorWhite"
                            android:textSize="15dp"
                            yourname:customFont="bukra_regular.ttf" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                        <com.example.fatmaali.madrasty2.Utilities.FontTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:text="@string/loginWays"
                            android:textColor="@color/colorLoginWays"
                            android:textSize="15dp"
                            yourname:customFont="bukra_regular.ttf" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:padding="10dp"
                            android:weightSum="6.2">

                            <com.example.fatmaali.madrasty2.Utilities.FontTextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:text="@string/google"
                                android:textColor="@color/google"
                                android:textSize="15dp"
                                yourname:customFont="bukra_regular.ttf" />

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".1"
                                android:src="@drawable/line" />

                            <com.example.fatmaali.madrasty2.Utilities.FontTextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:text="@string/facebook"
                                android:textColor="@color/facebook"
                                android:textSize="15dp"
                                yourname:customFont="bukra_regular.ttf" />

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".1"
                                android:src="@drawable/line" />

                            <com.example.fatmaali.madrasty2.Utilities.FontTextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:text="@string/tweeter"
                                android:textColor="@color/tweeter"
                                android:textSize="15dp"
                                yourname:customFont="bukra_regular.ttf" />

                        </LinearLayout>


                    </LinearLayout>


                </android.support.constraint.ConstraintLayout>
            </ScrollView>

            <RelativeLayout
                android:layout_weight="1"
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:layout_margin="3dp"
                android:gravity="bottom">

                <com.example.fatmaali.madrasty2.Utilities.FontTextView
                    android:id="@+id/registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="0dp"
                    android:gravity="right"
                    android:padding="8dp"
                    android:text="@string/new_acount"
                    android:textColor="@color/registration"
                    android:textSize="15dp"
                    yourname:customFont="bukra_medium.ttf" />

            </RelativeLayout>
        </LinearLayout>

</FrameLayout>